--- a/src/main/resources/templates/product/index.html
+++ b/src/main/resources/templates/product/index.html
@@ -12,6 +12,7 @@
     />
   </head>
   <body>
+    <a th:href="@{/product/create}">Cadastrar Produto</a>
     <div class="container">
       <h1>Listagem de Produto</h1>
       <table class="table table-striped">
