--- a/src/main/resources/templates/product/create.html
+++ b/src/main/resources/templates/product/create.html
@@ -41,7 +41,7 @@
                     placeholder="Digite a quantidade em estoque">
             </div>
         </div>
-        <button type="submit" class="btn btn-info col-2"> Cadastrar Produto</button>
+        <button type="submit" class="btn btn-primary"> Cadastrar Produto</button>
     </form>
 </div>
 </body>
