--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -67,7 +67,7 @@
       </ul>
       <form class="form-inline my-2 my-lg-0" action="/logout" method="post">
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-        <button type="submit" class="btn my-2 my-sm-0">Sair</button>
+        <button type="submit" class="btn btn-block d-lg-inline-block my-2 my-sm-0" >Sair</button>
       </form>
     </div>
   </div>
